# qwen3-tts.cpp-Fork

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  macreadme.txt  macreport.txt  report.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility.yml  config.yml  feature_request.yml
.github/workflows/: build-gpu.yml  release.yml
docs/: README.md  architecture.md  handoff.md  porting.md  tasks.md  tensor_mapping.md
docs/benchmarks/: OPTIMIZATION.md
docs/workflows/: cleanup.md  full-audit.md
reference/: det_metadata.json
scripts/: compare_e2e.py  convert_tokenizer_to_gguf.py  convert_tts_to_gguf.py  generate_deterministic_reference.py  generate_reference_outputs.py  run_all_tests.sh  setup_pipeline_models.py  validate_mimi_encoder.py
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h  coreml_code_predictor.mm  gguf_loader.cpp  gguf_loader.h  main.cpp  mimi_encoder.cpp  mimi_encoder.h  qwen3_tts.cpp  qwen3_tts.h  qwen3tts_c_api.cpp  qwen3tts_c_api.h  text_tokenizer.cpp  text_tokenizer.h  tts_transformer.cpp  tts_transformer.h
tests/: bench_batch.cpp  test_batch.cpp  test_codebook.cpp  test_decoder.cpp  test_mimi_encoder.cpp  test_tokenizer.cpp  test_transformer.cpp  test_vq_only.cpp
tools/: README.md
tools/build-scripts/: README.md  build.bat  build.sh
tools/model-converter/: README.md  setup_models.bat  setup_models.py  setup_models.sh
tools/model-converter/separate/: README.md  _hf_download.py  _interactive.py  download-model.bat  download-tokenizer.bat
tools/model-downloader/: README.md  download.bat  download.py  download.sh
